syntax = "proto3";

option go_package = "genproto/auth";

package auth;

service UserService{
    rpc GetProfile(GetByIdReq) returns (UserRes);
    rpc EditProfile(EditProfileReqBpdy) returns (UserRes);
    rpc ChangePassword(ChangePasswordReq) returns (ChangePasswordRes);
    rpc GetSetting(GetSettingReq) returns (Setting);
    rpc EditSetting(SettingReq) returns (SettingRes);
    rpc DeleteUser(DeleteReq) returns (DeleteRes);
}

message UserRes{
    string id = 1;
    string username = 2;
    string phone_number = 3;
    string email = 4;
    string full_name = 5;
    string date_of_birth = 6;
    string role = 7;
    string gym_id = 8;
    string gender = 9;
}


message EditProfileReqBpdy {
    string id = 1;
    string username = 2;
    string phone_number = 3;
    string email = 4;
    string full_name = 5;
    string date_of_birth = 6;
    string gym_id = 7;
    string gender = 8;
}

message ChangePasswordReq{
    string id = 1;
    string current_password = 2;
    string new_password = 3;
}

message ChangePasswordRes{
    string message = 1;
}

message ChangePasswordReqBody{
    string current_password = 1;
    string new_password = 2;
}

message SettingReq {
    string id = 1;
    string privacy_level = 2;
    string notification = 3;
    string language = 4;
    string theme = 5;
}

message Setting {
    string privacy_level = 1;
    string notification = 2;
    string language = 3;
    string theme = 4;
}

message GetByIdReq {
    string id = 1;
    string username = 2;
    string phone_number = 3;
    string email = 4;
    string full_name = 5;
    string date_of_birth = 6;
    string role = 7;
    string gym_id = 8;
    string gender = 9;
}

message GetSettingReq {
    string id = 1;
}

message DeleteReq {
    string id = 1;
}

message DeleteRes {
    string message = 1;
}

message SettingRes {
    string message = 1;
}

message UserRepeated {
    repeated UserRes users = 1;
}

